--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -6,6 +6,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  @media only screen and (max-width: 630px) {
+    padding: 0 10% 0;
+  }
   &__startevent {
     color: black;
     text-align: center;
